fixing button on mobile

--- a/Dark-Mode/css/styles.css
+++ b/Dark-Mode/css/styles.css
@@ -27,7 +27,7 @@ body {
   align-items: center;
   margin-top: 2rem;
   margin-left: 2rem;
-  gap: 0;
+  gap: 2rem;
   color: var(--body);
   transition: 0s;
 }
@@ -42,6 +42,7 @@ body {
   width: 4.5rem;
   height: 2.2rem;
   border-radius: 30px;
+  cursor: pointer;
 }
 
 .icon {
